# safeloader

./: .gitignore  README.md  pyproject.toml
src/safeloader/: __init__.py  bases.py  data_distributor.py  data_pipe.py  test.py  utils.py  worker.py
src/safeloader/item_readers/: csv_reader.py  item_reader.py  types.py
src/safeloader/scanners/: __init__.py  csv_scanner.py  imgfolder_scanner.py  json_scanner.py  line_scanner.py  parquet_scanner.py  scanner.py  suffix_scanner.py  tsv_scanner.py
